# traveller-lite

./: .env-example  .env.example  .gitignore  DEVTOOLS.md  Dockerfile  Dockerfile-base-layer  README.md  TODO.md  docker-compose-sqlite-dev.yaml  docker-compose-sqlite.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  supervisor.ini  supervisord.conf  time_flask_terminal_print.py  todo.md
app/: __init__.py  default.config.toml  docker.config.toml
app/2024/: __init__.py
app/conf_2023/: __init__.py
app/conf_2024/: __init__.py
app/conf_2025/: __init__.py
app/extensions/: __init__.py  emailer_client.py
app/global/: context_processors.py  seed_cli.py
app/models/: __init__.py  __mixins__.py  __resources__.py  accounts.py  conferences.py  display_pictures.py  email_queue.py  media_partners.py  profile.py  profiles.py  proposal_statuses.py  proposal_votes.py  proposals.py  roles.py  roles_membership.py  secure_endpoints.py  secure_endpoints_membership.py  sponsors.py  talk_notes.py  talk_statuses.py  talks.py  (+2 more)
assets/: flaskcon-2025-animated.aseprite
configs/: gunicorn.conf.py
emailer_client/: __init__.py
emailer_server/: __main__.py  email_service.py  socket_process.py  socket_process_manager.py  socket_server.py  socket_types.py
frontend_2024/: ComingSoon.jsx  Index.jsx  Router.jsx  index.css  index.html  package-lock.json  tailwind.config.js
frontend_2025/: ComingSoon.jsx  Index.jsx  Router.jsx  index.css  index.html
requirements/: dev.txt
vite_2024_frontend/: App.jsx  Index.jsx  index.css
(+488 files in other folders)
