[project]
name = "traveller-lite"
version = "0.1.0"
description = "Websites for FlaskCon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-vite-transporter>=2.1.0",
    "gunicorn>=23.0.0",
    "pyhead>=4.2.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pyqwe>=3.1.1",
]

[lint]
ignore = ["F405", "F403"]

[tool.flask_vite_transporter]
npm_exec = "npm"
npx_exec = "npx"
serve_app = "app"
vite_app.frontend_2024 = "frontend_2024"
vite_app.frontend_2025 = "frontend_2025"

[tool.pyqwe]
frontend_2024_run = "*(frontend_2024):npx vite"
frontend_2024_setup = "*(frontend_2024):npm i"
frontend_2024_build = "*:vt pack transport -o frontend_2024"

frontend_2025_run = "*(frontend_2025):npx vite"
frontend_2025_setup = "*(frontend_2025):npm i"
frontend_2025_build = "*:vt pack transport -o frontend_2025"
